--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <nav>
-   <div class="nav-wrapper">
+   <div class="nav-wrapper lime darken-2">
      <a href="#!" class="brand-logo">PlantTrack</a>
      <ul class="right hide-on-med-and-down">
        <li><a href="/signup" class="waves-effect waves-light btn">Signup</a></li>
@@ -7,3 +7,29 @@
      </ul>
    </div>
  </nav>
+
+   <div class="slider">
+     <ul class="slides">
+       <li>
+         <img src="https://images.pexels.com/photos/709785/pexels-photo-709785.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb"> <!-- random image -->
+         <div class="caption center-align">
+           <h3>This is our big Tagline!</h3>
+           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+         </div>
+       </li>
+       <li>
+         <img src="https://images.pexels.com/photos/6370/nature-flowers-white-plants.jpg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb"> <!-- random image -->
+         <div class="caption center-align">
+           <h3>This is our big Tagline!</h3>
+           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+         </div>
+       </li>
+       <li>
+         <img src="https://images.pexels.com/photos/351961/pexels-photo-351961.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb"> <!-- random image -->
+         <div class="caption center-align">
+           <h3>This is our big Tagline!</h3>
+           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+         </div>
+       </li>
+     </ul>
+   </div>
