Added cards styling for displaying plants

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -17,7 +17,7 @@
 </section>
 
 <div class="row">
-    <form class="col s12">
+    <form action="/signup" class="col s12" method="POST">
       <div class="row">
         <div class="input-field col s6 offset-s3">
           <input id="username" type="text" class="validate" name="username">
