--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -29,7 +29,7 @@
       </div>
       <div class="row">
         <div class="input-field col s6 offset-s3">
-          <input id="password" type="text" class="validate" name="password">
+          <input id="password" type="password" class="validate" name="password">
           <label for="password">Password</label>
         </div>
       </div>
