--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -23,7 +23,7 @@
       </div>
       <div class="row">
         <div class="input-field col s6 offset-s3">
-          <input id="email" type="email" class="validate">
+          <input id="email" type="text" class="validate">
           <label for="email" data-error="wrong" data-success="right">Email</label>
         </div>
       </div>
