--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,6 @@
 <nav>
    <div class="nav-wrapper green darken-1">
-     <a href="#!" class="brand-logo">PlantTrack</a>
+     <a href="/" class="brand-logo">PlantTrack</a>
      <ul class="right hide-on-med-and-down">
        <li><a href="/login" class="waves-effect waves-light btn cyan darken-1">Login</a></li>
      </ul>
