--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -1,11 +1,3 @@
-t.string :name
-t.string :picture
-t.string :sunlight
-t.string :soil
-t.string :container_size
-t.string :drainage
-t.integer :user_id
-
 <nav>
    <div class="nav-wrapper green darken-1">
      <a href="/" class="brand-logo">PlantTrack</a>
@@ -34,16 +26,45 @@ t.integer :user_id
       </div>
       <div class="row">
         <div class="input-field col s6 offset-s3">
-          <input id="email" type="text" class="validate">
-          <label for="email" data-error="wrong" data-success="right">Email</label>
+          <input id="picture" type="text">
+          <label for="picture">Photo Url</label>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col s3 offset-s3">
+          <h6 style="color:#00acc1;">Sunlight Needs</h6>
+          <p>
+          <input name="sunlight" type="radio" id="sunlight_low" />
+          <label for="sunlight_low">Low</label>
+        </p>
+          <p>
+          <input name="sunlight" type="radio" id="sunlight_med" />
+          <label for="sunlight_med">Medium</label>
+        </p>
+          <p>
+          <input name="sunlight" type="radio" id="sunlight_high" />
+          <label for="sunlight_high">High</label>
+        </p>
+        </div>
+      </div>
+
       <div class="row">
         <div class="input-field col s6 offset-s3">
-          <input id="password" type="password" class="validate" name="password">
-          <label for="password">Password</label>
+          <select>
+            <option value="" disabled selected>Choose the soil type</option>
+            <option value="sandy">Sandy</option>
+            <option value="clay">Clay</option>
+            <option value="silt">Silt</option>
+            <option value="peaty">Peaty</option>
+            <option value="loam">Loam</option>
+            <option value="chalky">Chalky</option>
+          </select>
+        <label>Soil Type</label>
+        <p id="soil-description" style="color:#00acc1;"></p>
         </div>
       </div>
+
       <div class="row">
         <div class="input-field col s6 offset-s3">
           <input type="submit" class="waves-effect waves-light btn deep-orange lighten-1" name="submit"></input>
@@ -53,11 +74,48 @@ t.integer :user_id
     </form>
 </div>
 
+
+
 <ul class="pagination">
     <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
     <li class="active"><a href="#!">1</a></li>
     <li class="waves-effect"><a href="/instructions">2</a></li>
     <li class="waves-effect"><a href="/statuses">3</a></li>
-    <li class="waves-effect"><a href="/plants/<%=@plant.id%>">4</a></li>
+    <li class="waves-effect"><a href="/plants">4</a></li>
     <li class="waves-effect"><a href="/instructions" class="waves-effect waves-light btn blue-grey lighten-3">Next</a></li>
   </ul>
+
+<script>
+function changeSoilDescription() {
+  var elem = document.getElementById('soil-description');
+  var selected = document.getElementsByClassName('active selected')[0].innerText
+
+  switch(selected) {
+    case "Sandy":
+        elem.innerText = "Sandy soils are light, dry, warm, low in nutrients and often acidic"
+        break;
+    case "Clay":
+      elem.innerText = "Clay soils are heavy, high in nutrients, wet and cold in winter and baked dry in summer"
+        break;
+    case "Silt":
+      elem.innerText = "Silt soils are fertile, light but moisture-retentive, and easily compacted"
+        break;
+    case "Peaty":
+      elem.innerText = "Peat soils are very high in organic matter and moisture"
+        break;
+    case "Loam":
+      elem.innerText = "Loams are mixtures of clay, sand and silt that avoid the extremes of each type"
+        break;
+    case "Chalky":
+      elem.innerText = "Chalky soils are very alkaline and may be light or heavy"
+        break;
+    default:
+      elem.innerText = ""
+    }
+}
+
+$(document).ready(function() {
+  $('select').material_select();
+  changeSoilDescription;
+});
+</script>
