--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -14,25 +14,25 @@
    <h6 class="center-align"></h6>
  </div>
  </div>
-</section>
+
 
 <div class="row">
     <form action="/plants" class="col s12" method="POST">
       <div class="row">
-        <div class="input-field col s6 offset-s3">
+        <div class="input-field col s8 offset-s2">
           <input id="name" type="text" name="name">
           <label for="name">Plant Name</label>
         </div>
       </div>
       <div class="row">
-        <div class="input-field col s6 offset-s3">
+        <div class="input-field col s8 offset-s2">
           <input id="picture" type="text">
           <label for="picture">Photo Url</label>
         </div>
       </div>
 
       <div class="row">
-        <div class="col s3 offset-s3">
+        <div class="col s2 offset-s2">
           <h6 style="color:#00acc1;">Sunlight Needs</h6>
           <p>
           <input name="sunlight" type="radio" id="sunlight_low" />
@@ -47,53 +47,158 @@
           <label for="sunlight_high">High</label>
         </p>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="input-field col s6 offset-s3" >
-          <select id="soilType">
+        <div class="col s2">
+          <h6 style="color:#00acc1;">Soil Type</h6>
+          <p>
+            <input name="soil" type="radio" id="soil-clay" />
+            <label for="soil-clay">Clay</label>
+          </p>
+          <p>
+            <input name="soil" type="radio" id="soil-silt" />
+            <label for="soil-silt">Silt</label>
+          </p>
+          <p>
+            <input name="soil" type="radio" id="soil-peaty" />
+            <label for="soil-peaty">Peaty</label>
+          </p>
+          <p>
+            <input name="soil" type="radio" id="soil-loam" />
+            <label for="soil-loam">Loam</label>
+          </p>
+          <p>
+            <input name="soil" type="radio" id="soil-chalky" />
+            <label for="soil-chalky">Chalky</label>
+          </p>
+          <!--<select>
             <option value="" disabled selected>Choose the soil type</option>
-            <option value="sandy">Sandy</option>
+            <option value="sandy" onclick="Materialize.toast('I am a toast', 4000)">Sandy</option>
             <option value="clay">Clay</option>
-            <option value="silt">Silt</option>
+            <option value="silt" >Silt</option>
             <option value="peaty">Peaty</option>
             <option value="loam">Loam</option>
             <option value="chalky">Chalky</option>
           </select>
         <label>Soil Type</label>
         <p id="soil-description" style="color:#00acc1;">thing</p>
+      -->
+        </div>
+
+        <div class="col s2">
+          <h6 style="color:#00acc1;">Container Size</h6>
+          <p>
+            <input name="container" type="radio" id="container-xs" />
+            <label for="container-xs">Extra Small</label>
+          </p>
+          <p>
+            <input name="container" type="radio" id="container-sm" />
+            <label for="container-sm">Small</label>
+          </p>
+          <p>
+            <input name="container" type="radio" id="container-med" />
+            <label for="container-med">Medium</label>
+          </p>
+          <p>
+            <input name="container" type="radio" id="container-lg" />
+            <label for="container-lg">Large</label>
+          </p>
+        </div>
+
+        <div class="col s2">
+          <h6 style="color:#00acc1;">Soil Drainage Needs</h6>
+          <p>
+            <input name="drainage" type="radio" id="drainage-low" />
+            <label for="drainage-low">Low</label>
+          </p>
+          <p>
+            <input name="drainage" type="radio" id="drainage-med" />
+            <label for="drainage-med">Medium</label>
+          </p>
+          <p>
+            <input name="drainage" type="radio" id="drainage-high" />
+            <label for="drainage-high">High</label>
+          </p>
+          <p>
+            <input name="drainage" type="radio" id="drainage-very-high" />
+            <label for="drainage-very-high">Very High</label>
+          </p>
         </div>
       </div>
+</section>
+
+<section>
+  <div class="col s6 offset-s3">
+ <div class="row">
+   <h4 class="header center-align" style="color:#00acc1;">Add care instructions</h4>
+   <h6 class="center-align"></h6>
+ </div>
+ </div>
+
+ <div class="row">
+   <div class="input-field col s2 offset-s2">
+     <input id="water-amt" type="text" name="water-amt">
+     <label for="water-amt">Water Amount</label>
+   </div>
+   <div class="input-field col s2">
+   <select>
+     <option value="" disabled selected>Unit of Water</option>
+     <option value="spritz">Spritz</option>
+     <option value="tsp">Teaspoon(s)</option>
+     <option value="tbsp" >Tablespoon(s)</option>
+     <option value="cup">Cup(s)</option>
+     <option value="pint" >Pint(s)</option>
+     <option value="oz">Ounce(s)</option>
+     <option value="quart">Quart(s)</option>
+     </select>
+      <label>Water Unit</label>
+   </div>
+
+   <div class="input-field col s2">
+     <input id="water-freq" type="text" name="water_freq">
+     <label for="water-freq">Water Frequency</label>
+   </div>
+   <div class="input-field col s2">
+   <select>
+     <option value="" disabled selected>Frequency Unit</option>
+     <option value="day">Day(s)</option>
+     <option value="week">Week(s)</option>
+     <option value="month" >Month(s)</option>
+     </select>
+      <label>Frequency</label>
+   </div>
+
+
+ </div>
+
+ </section>
 
       <div class="row">
-        <div class="input-field col s6 offset-s3">
+        <div class="input-field col s6 offset-s2">
           <input type="submit" class="waves-effect waves-light btn deep-orange lighten-1" name="submit"></input>
-          <a href="/login" class="waves-effect waves-light btn blue-grey lighten-3">Login</a>
         </div>
       </div>
     </form>
 </div>
 
 
-
+<!--
 <ul class="pagination">
     <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-    <li class="active"><a href="#!">1</a></li>
-    <li class="waves-effect"><a href="/instructions">2</a></li>
+    <li class="active"><a href="/plants/new">1</a></li>
+    <li class="waves-effect"><a href="#instructions">2</a></li>
     <li class="waves-effect"><a href="/statuses">3</a></li>
     <li class="waves-effect"><a href="/plants">4</a></li>
     <li class="waves-effect"><a href="/instructions" class="waves-effect waves-light btn blue-grey lighten-3">Next</a></li>
-  </ul>
+  </ul>-->
 
 <script>
 $(document).ready(function() {
   $('select').material_select();
+  $('.tooltipped').tooltip({delay: 50});
 });
 
-$('.select-wrapper').change(function () {
+function changeSoilDescription() {
   var elem = document.getElementById('soil-description');
   var selected = document.getElementsByClassName('active selected')[0].innerText;
-
   switch(selected) {
     case "Sandy":
         elem.innerText = "Sandy soils are light, dry, warm, low in nutrients and often acidic";
@@ -115,6 +220,6 @@ $('.select-wrapper').change(function () {
         break;
     default:
       elem.innerText = "";
-    };
-});
+    }
+}
 </script>
