--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -10,7 +10,7 @@
 <section>
   <div class="col s6 offset-s3">
  <div class="row">
-   <h3 class="header center-align" style="color:#00acc1;">Add a New Plant</h3>
+   <h4 class="header center-align" style="color:#00acc1;">Add a New Plant</h4>
    <h6 class="center-align"></h6>
  </div>
  </div>
@@ -165,10 +165,29 @@
      </select>
       <label>Frequency</label>
    </div>
-
-
  </div>
+ </section>
 
+ <section>
+   <div class="row">
+    <div class="col s8 offset-s2">
+       <div class="card">
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">
+            <div class="input-field">
+              <input id="status" type="text" name="status">
+              <label for="status">Status Update</label>
+            </div>
+            </span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+        </div>
+      </div>
+    </div>
+  </div>
  </section>
 
       <div class="row">
