--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -7,18 +7,18 @@
    </div>
  </nav>
 
- <div class="parallax-container" style="height:300px;">
+ <!--<div class="parallax-container" style="height:300px;">
    <h2 class="header center-align" style="color:white; padding-top:6%;">Add a New Plant</h2>
    <div class="parallax"><img src="https://images.pexels.com/photos/572487/pexels-photo-572487.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb"></div>
- </div>
+ </div>-->
 
 
 <section>
   <div class="row">
    <div class="col s8 offset-s2">
-      <div class="card">
-       <div class="card-content">
-        <!--<h4 class="header center-align" style="color:#00acc1;">Add a New Plant</h4>-->
+      <!--<div class="card">
+       <div class="card-content">-->
+        <h4 class="header center-align" style="color:#00acc1; margin-top:50px;">Add a New Plant</h4>
       <div class="row">
           <form action="/plants" class="col s12" method="POST">
             <div class="row">
@@ -129,17 +129,18 @@
             </div>
             </div>
             </div>
+            <!--
             </div>
-          </div>
+          </div>-->
       </section>
 
-<div class="parallax-container" style="height:500px">
+<div class="parallax-container" style="height:450px">
  <div class="parallax"><img src="https://images.pexels.com/photos/212323/pexels-photo-212323.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb">
       <section>
         <div class="row">
          <div class="col s8 offset-s2">
            <!--<h2 class="header center-align" style="color:white;">Add Care Instructions</h2>-->
-            <div class="card">
+            <div class="card" style="margin-top:50px;">
              <div class="card-content">
                <h4 class="header center-align" style="color:#00acc1;">Add care instructions</h4>
                <div class="row">
@@ -190,7 +191,7 @@
     <div class="col s8 offset-s2">
        <div class="card">
         <div class="card-content">
-          <h4 class="header center-align" style="color:#00acc1;">Add a Plant Status</h4>
+          <h4 class="header center-align" style="color:#00acc1;">Add a Plant Status Event</h4>
           <div class="input-field">
           <select name="event">
             <option value="" disabled selected>Select an event</option>
@@ -266,15 +267,16 @@ $(document).ready(function() {
   $('select').material_select();
   $('.tooltipped').tooltip({delay: 50});
   $('.parallax').parallax();
-});
+  $('.carousel').carousel();
+  $('.datepicker').pickadate({
+    selectMonths: true, // Creates a dropdown to control month
+    selectYears: 15, // Creates a dropdown of 15 years to control year,
+    today: 'Today',
+    clear: 'Clear',
+    close: 'Ok',
+    closeOnSelect: false // Close upon selecting a date,
+  });
 
-$('.datepicker').pickadate({
-  selectMonths: true, // Creates a dropdown to control month
-  selectYears: 15, // Creates a dropdown of 15 years to control year,
-  today: 'Today',
-  clear: 'Clear',
-  close: 'Ok',
-  closeOnSelect: false // Close upon selecting a date,
 });
 
 function changeSoilDescription() {
