--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -12,7 +12,6 @@
    <div class="parallax"><img src="https://images.pexels.com/photos/572487/pexels-photo-572487.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb"></div>
  </div>-->
 
-
 <section>
   <div class="row">
    <div class="col s8 offset-s2">
@@ -134,15 +133,75 @@
           </div>-->
       </section>
 
-<div class="parallax-container" style="height:450px">
- <div class="parallax"><img src="https://images.pexels.com/photos/212323/pexels-photo-212323.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb">
-      <section>
+<div class="parallax-container" style="height:700px">
+ <div class="parallax"><img src="https://images.pexels.com/photos/631909/pexels-photo-631909.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb">
+   <section style="margin-top:80px;">
+     <div class="row">
+      <div class="col s8 offset-s2">
+         <div class="card">
+          <div class="card-content">
+            <h5 class="header center-align" style="color:#00acc1;">Keep Your Plant Up-to-date</h5>
+            <h4 class="header center-align" style="color:#00acc1;">Add a Plant Status Event</h4>
+            <div class="input-field">
+            <select name="event">
+              <option value="" disabled selected>Select an event</option>
+              <option value="watered">Watered</option>
+              <option value="pruned">Pruned</option>
+              <option value="moved-more-sun">Moved to More Sun</option>
+              <option value="moved-less-sun">Moved to Less Sun</option>
+              <option value="moved-less-sun">Repotted</option>
+              </select>
+               <label>Event</label>
+            </div>
+
+          <label for="status-date">Select the Event date</label>
+          <input type="text" class="datepicker" id="status-date" name="event_date">
+
+              <div class="input-field">
+              <select name="leaf_status">
+                <option value="" disabled selected>How's your plant looking?</option>
+                <option value="healthy">Healthy</option>
+                <option value="curling">Curling</option>
+                <option value="drooping">Drooping</option>
+                <option value="yellowing">Yellowing</option>
+                <option value="lspots">Light Spots</option>
+                <option value="dspots">Dark Spots</option>
+                <option value="dead">Dead Leaves</option>
+                </select>
+                 <label>Leaf Status</label>
+              </div>
+
+              <div class="input-field">
+              <select name="soil_status">
+                <option value="" disabled selected>How's the soil feel?</option>
+                <option value="verydry">Extremely Dry</option>
+                <option value="dry">Dry</option>
+                <option value="damp">Damp</option>
+                <option value="soaked">Soaked</option>
+                <option value="mildew">Showing Mildew</option>
+                </select>
+                 <label>Soil Status</label>
+              </div>
+
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+   </section>
+</div>
+</div> <!--end parallax image-->
+
+<section>
         <div class="row">
          <div class="col s8 offset-s2">
-           <!--<h2 class="header center-align" style="color:white;">Add Care Instructions</h2>-->
+           <!--<h2 class="header center-align" style="color:white;">Add Care Instructions</h2>
             <div class="card" style="margin-top:50px;">
-             <div class="card-content">
-               <h4 class="header center-align" style="color:#00acc1;">Add care instructions</h4>
+             <div class="card-content">-->
+               <h4 class="header center-align" style="color:#00acc1; margin-top:50px;">Add care instructions</h4>
                <div class="row">
                  <div class="input-field col s4">
                    <input id="water-amt" type="text" name="status[water_amt]">
@@ -180,77 +239,17 @@
                </div>
              </div>
      </div>
-   </div>
-  </div>
+   <!--</div>
+  </div>-->
 </section>
-</div>
-</div> <!--end parallax image-->
 
- <section>
-   <div class="row">
-    <div class="col s8 offset-s2">
-       <div class="card">
-        <div class="card-content">
-          <h4 class="header center-align" style="color:#00acc1;">Add a Plant Status Event</h4>
-          <h5 class="header center-align" style="color:#00acc1;">Keep Your Plant Up-to-date</h5>
-          <div class="input-field">
-          <select name="event">
-            <option value="" disabled selected>Select an event</option>
-            <option value="watered">Watered</option>
-            <option value="pruned">Pruned</option>
-            <option value="moved-more-sun">Moved to More Sun</option>
-            <option value="moved-less-sun">Moved to Less Sun</option>
-            <option value="moved-less-sun">Repotted</option>
-            </select>
-             <label>Event</label>
-          </div>
 
-        <label for="status-date">Select the Event date</label>
-        <input type="text" class="datepicker" id="status-date" name="event_date">
-
-            <div class="input-field">
-            <select name="leaf_status">
-              <option value="" disabled selected>How's your plant looking?</option>
-              <option value="healthy">Healthy</option>
-              <option value="curling">Curling</option>
-              <option value="drooping">Drooping</option>
-              <option value="yellowing">Yellowing</option>
-              <option value="lspots">Light Spots</option>
-              <option value="dspots">Dark Spots</option>
-              <option value="dead">Dead Leaves</option>
-              </select>
-               <label>Leaf Status</label>
-            </div>
-
-            <div class="input-field">
-            <select name="soil_status">
-              <option value="" disabled selected>How's the soil feel?</option>
-              <option value="verydry">Extremely Dry</option>
-              <option value="dry">Dry</option>
-              <option value="damp">Damp</option>
-              <option value="soaked">Soaked</option>
-              <option value="mildew">Showing Mildew</option>
-              </select>
-               <label>Soil Status</label>
-            </div>
-
-        </div>
-        <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-          <p>Here is some more information about this product that is only revealed once clicked on.</p>
-        </div>
-      </div>
-    </div>
-  </div>
- </section>
-
-      <div class="row">
-        <div class="input-field col s6 offset-s2">
-          <input type="submit" class="waves-effect waves-light btn deep-orange lighten-1" name="submit"></input>
+      <div class="row" style="height:200px;">
+        <div class="input-field col offset-s5" style="margin-top:5S0px;">
+          <input type="submit" class="waves-effect waves-light btn-large deep-orange lighten-1" name="submit"></input>
         </div>
       </div>
     </form>
-</div>
 
 
 <!--
