--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -37,15 +37,15 @@
               <div class="col s3">
                 <h6 style="color:#00acc1;">Sunlight Needs</h6>
                 <p>
-                <input name="sunlight" type="radio" id="sunlight_low" />
+                <input name="plant[sunlight][low]" type="radio" id="sunlight_low" />
                 <label for="sunlight_low">Low</label>
               </p>
                 <p>
-                <input name="sunlight" type="radio" id="sunlight_med" />
+                <input name="plant[sunlight][med]" type="radio" id="sunlight_med" />
                 <label for="sunlight_med">Medium</label>
               </p>
                 <p>
-                <input name="sunlight" type="radio" id="sunlight_high" />
+                <input name="plant[sunlight][high]" type="radio" id="sunlight_high" />
                 <label for="sunlight_high">High</label>
               </p>
               </div>
@@ -134,7 +134,8 @@
       </section>
 
 <div class="parallax-container" style="height:700px">
- <div class="parallax"><img src="https://images.pexels.com/photos/631909/pexels-photo-631909.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb">
+ <div class="parallax"><img src="https://images.pexels.com/photos/631909/pexels-photo-631909.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb"></div>
+
    <section style="margin-top:80px;">
      <div class="row">
       <div class="col s8 offset-s2">
@@ -160,6 +161,7 @@
               <div class="input-field">
               <select name="leaf_status">
                 <option value="" disabled selected>How's your plant looking?</option>
+                <option value="healthy">New Growth</option>
                 <option value="healthy">Healthy</option>
                 <option value="curling">Curling</option>
                 <option value="drooping">Drooping</option>
@@ -192,7 +194,6 @@
       </div>
     </div>
    </section>
-</div>
 </div> <!--end parallax image-->
 
 <section>
@@ -243,10 +244,13 @@
   </div>-->
 </section>
 
-
       <div class="row" style="height:200px;">
         <div class="input-field col offset-s5" style="margin-top:5S0px;">
-          <input type="submit" class="waves-effect waves-light btn-large deep-orange lighten-1" name="submit"></input>
+          <button class="btn-large waves-effect waves-light deep-orange lighten-1" type="submit" name="action">Submit
+              <i class="material-icons right">add</i>
+          </button>
+
+          <!--<input type="submit" value="submit" class="waves-effect waves-light btn-large deep-orange lighten-1" name="submit"></input>-->
         </div>
       </div>
     </form>
